--- a/api-client/css/style.css
+++ b/api-client/css/style.css
@@ -5,10 +5,11 @@ body {
   /* Fonts from Google Fonts - more at https://fonts.google.com */
   @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
   @import url("https://fonts.googleapis.com/css?family=Merriweather:400,700");
+  @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
   
   body {
     background-color: white;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Lato', sans-serif;
     padding: 5px 25px;
     font-size: 18px;
     margin: 0;
@@ -16,7 +17,7 @@ body {
   }
   
   h1 {
-    font-family: "Merriweather", serif;
+    font-family: 'Merriweather', serif;
     font-size: 32px;
   }
 
